# OOPS-Project

./: CMakeLists.txt  RunCommand.txt  build.bat  build.sh  main.cpp  users.txt
files/: abc.txt  bb.txt  bigs.txt  users.txt
headers/: FileHandling.h  NotificationManager.h  Task.h  TaskManager.h  User.h  UserManager.h  ui.h
src/: FileHandling.cpp  Task.cpp  TaskManager.cpp  User.cpp  UserManager.cpp  ui.cpp
